View Issue Details

IDProjectCategoryView StatusLast Update
0029929Open CASCADEOCCT:Visualizationpublic2018-07-30 10:13
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
Product Version7.3.0 
Target Version7.4.0Fixed in Version7.4.0 
Summary0029929: Visualization, V3d_View - make method ::FitMinMax() public
DescriptionV3d_View::FitMinMax() is currently inaccessible, which does not make sense - it could be useful at application side, and sub-classing V3d_View for this purpose looks overkill.
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Activities

git

2018-07-05 12:54

administrator   ~0077286

Branch CR29929 has been created by kgv.

SHA-1: 77154ad4c1afb8e3da84e4c8c41e39f4d343e9c7


Detailed log of new commits:

Author: kgv
Date: Thu Jul 5 12:54:05 2018 +0300

    0029929: Visualization, V3d_View - make method ::FitMinMax() public

kgv

2018-07-05 14:48

developer   ~0077289

Please take the patch.

http://jenkins-test-11.nnov.opencascade.com/view/CR29929-master-KGV

git

2018-07-08 12:00

administrator   ~0077349

Branch CR29929 has been deleted by inv.

SHA-1: 77154ad4c1afb8e3da84e4c8c41e39f4d343e9c7

Related Changesets

occt: master 14823c6f

2018-07-05 09:54:05

kgv


Committer: bugmaster Details Diff
0029929: Visualization, V3d_View - make method ::FitMinMax() public Affected Issues
0029929
mod - src/V3d/V3d_View.hxx Diff File

Issue History

Date Modified Username Field Change
2018-07-05 11:57 kgv New Issue
2018-07-05 11:57 kgv Assigned To => kgv
2018-07-05 12:54 git Note Added: 0077286
2018-07-05 14:48 kgv Note Added: 0077289
2018-07-05 14:48 kgv Assigned To kgv => bugmaster
2018-07-05 14:48 kgv Severity minor => trivial
2018-07-05 14:48 kgv Status new => resolved
2018-07-05 14:48 kgv Status resolved => reviewed
2018-07-05 15:13 bugmaster Status reviewed => tested
2018-07-08 11:37 bugmaster Changeset attached => occt master 14823c6f
2018-07-08 11:37 bugmaster Status tested => verified
2018-07-08 11:37 bugmaster Resolution open => fixed
2018-07-08 12:00 git Note Added: 0077349
2018-07-30 10:13 bugmaster Test case number => Not needed