0029929: Visualization, V3d_View - make method ::FitMinMax() public